updated to 2.46.3.2 to include plugins